add GetRecordComments & fix model
