# openapi.yml
@@ -248,13 +248,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/Comment"
 
-  "/api/users/{user_id}/records/{record_id}/comments":
+  "/api/records/{record_id}/comments":
     get:
-      description: コメント一覧
+      description: スポットコメント一覧
       operationId: UserCommentIndex
       parameters:
         [
-          $ref: "#/components/parameters/UserId",
           $ref: "#/components/parameters/RecordId"
         ]
       responses:
@@ -264,6 +263,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Comment"
+
+  "/api/users/{user_id}/records/{record_id}/comments":
     post:
       description: コメント作成
       operationId: CommentCreate
